--- a/py-mgr/package.json
+++ b/py-mgr/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "babel": "^5.8.23",
     "browserify": "^11.2.0",
+    "chai": "^3.3.0",
     "mocha": "^2.3.3"
   }
 }
