add ProgramConfig test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,3 +110,6 @@ add_executable(f4 ${f4})
 TARGET_LINK_LIBRARIES(f4 cppunit)
 set_target_properties(f4 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/dist/tests)
 add_test(UATokenizer dist/tests/f4)
+
+# ProgramConfig
+add_subdirectory(common/test)
