add babel 6, and remove the unnecessary export from a task

--- a/py-mgr/package.json
+++ b/py-mgr/package.json
@@ -5,12 +5,27 @@
     "pack": "mkdir -p js-dist && node_modules/browserify/bin/cmd.js js-build/main.js -o js-dist/out.js",
     "build": "npm run clear && npm run transpile && npm run pack",
     "clear": "rm -rf js-build && rm -rf js-dist",
-    "test": "export BABEL_ENV=development; ./node_modules/mocha/bin/mocha --compilers js:babel/register --recursive js-test"
+    "test": "BABEL_ENV=development; ./node_modules/mocha/bin/mocha --compilers js:babel-register --recursive js-test"
   },
   "devDependencies": {
     "babel": "^5.8.23",
+    "babel-core": "^6.4.5",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.4.3",
+    "babel-template": "^6.3.13",
+    "babel-types": "^6.4.5",
     "browserify": "^11.2.0",
     "chai": "^3.3.0",
     "mocha": "^2.3.3"
+  },
+  "babel": {
+    "env": {
+      "development": {
+        "plugins": [
+          "babel-plugin-rewire"
+        ],
+        "presets": ["es2015"]
+      }
+    }
   }
 }
