--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,14 +66,7 @@ add_subdirectory(src/NaiveBayessClassifier/test)
 add_subdirectory(src/NgramBuilder/test)
 
 # UATokenizer
-file(GLOB f4
-    "src/UATokenizer/test/*"
-    "src/UATokenizer/src/*"
-)
-add_executable(f4 ${f4})
-TARGET_LINK_LIBRARIES(f4 cppunit)
-set_target_properties(f4 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/dist/tests)
-add_test(UATokenizer dist/tests/f4)
+add_subdirectory(src/UATokenizer/test)
 
 # Common Tests
 add_subdirectory(src/common/test)
