use ProgramConfig in the client application

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,9 @@ file(GLOB ALL_SRC
 
 file(GLOB CLIENT_SRC
     "src/client.cpp"
+    "src/common/src/*.h"
+    "src/common/src/*.cpp"
+    "src/FileInputReader/src/*"
 )
 
 file(GLOB SERVER_SRC    
