specify explicitly the files needed to build f5 test target

--- a/src/common/test/CMakeLists.txt
+++ b/src/common/test/CMakeLists.txt
@@ -1,9 +1,10 @@
 # ProgramConfig Test
 file(GLOB f5
-    "./*.h"
-    "./*.cpp"
-    "../src/*.h"
-    "../src/*.cpp"
+    "./programConfigTest.h"
+    "./programConfigTest.cpp"
+    "./programConfigTestRunner.cpp"
+    "../src/ProgramConfig.h"
+    "../src/ProgramConfig.cpp"
     "../../FileInputReader/src/*"
 )
 add_executable(f5 ${f5})
