adds FileLog to the Network class

--- a/src/Network/test/CMakeLists.txt
+++ b/src/Network/test/CMakeLists.txt
@@ -2,6 +2,7 @@
 file(GLOB network
     "./*"
     "../src/*"
+    "../../common/src/FileLog.*"
 )
 add_executable(network ${network})
 TARGET_LINK_LIBRARIES(network cppunit)
