use the Network class to create network connection

--- a/src/Network/test/CMakeLists.txt
+++ b/src/Network/test/CMakeLists.txt
@@ -5,6 +5,8 @@ file(GLOB network
     "../../common/src/FileLog.*"
     "../../common/src/uadet2.*"
 )
+
+set(CMAKE_CXX_FLAGS "-std=c++11 -g")
 add_executable(network ${network})
 TARGET_LINK_LIBRARIES(network cppunit)
 set_target_properties(network PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/dist/tests)
