updates the path to Client which excludes the test directory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,7 @@ file(GLOB CLIENT_SRC
     "src/common/src/*.cpp"
     "src/FileInputReader/src/*"
     "src/Network/src/*"
-    "src/Client/*"
+    "src/Client/src/*"
 )
 
 file(GLOB SERVER_SRC    
