extract a child class from NgramBuilder which handles user-agent tokenization so that NgramBuilder is more generic

--- a/src/NgramBuilder/test/CMakeLists.txt
+++ b/src/NgramBuilder/test/CMakeLists.txt
@@ -1,10 +1,19 @@
 # NgramBuilder
-file(GLOB f3
-    "./*"
+file(GLOB ngram
+    "./ngramBuilder*"
+    "../src/ngramBuilder*"
+)
+add_executable(ngram ${ngram})
+TARGET_LINK_LIBRARIES(ngram cppunit)
+set_target_properties(ngram PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/dist/tests)
+add_test(NgramBuilder ${PROJECT_SOURCE_DIR}/dist/tests/ngram)
+
+file(GLOB uaNgram
+    "./uaNgramBuilder*"
     "../src/*"
     "../../UATokenizer/src/*"
 )
-add_executable(f3 ${f3})
-TARGET_LINK_LIBRARIES(f3 cppunit)
-set_target_properties(f3 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/dist/tests)
-add_test(NgramBuilder ${PROJECT_SOURCE_DIR}/dist/tests/f3)
+add_executable(uaNgram ${uaNgram})
+TARGET_LINK_LIBRARIES(uaNgram cppunit)
+set_target_properties(uaNgram PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/dist/tests)
+add_test(UaNgramBuilder ${PROJECT_SOURCE_DIR}/dist/tests/uaNgram)
