add missing #includes and fix a letter casing in CMakeLists.txt
now compiles on scientific linux

--- a/src/NgramBuilder/test/CMakeLists.txt
+++ b/src/NgramBuilder/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 # NgramBuilder
 file(GLOB ngram
     "./ngramBuilder*"
-    "../src/ngramBuilder*"
+    "../src/NgramBuilder*"
 )
 add_executable(ngram ${ngram})
 TARGET_LINK_LIBRARIES(ngram cppunit)
