--- a/src/NaiveBayessClassifier/test/CMakeLists.txt
+++ b/src/NaiveBayessClassifier/test/CMakeLists.txt
@@ -1,11 +1,11 @@
 # NaiveBayessClassifier
-file(GLOB f2
+file(GLOB nbClassifierTest
     "./*"
     "../src/*"
     "../../NgramBuilder/src/*"
     "../../UATokenizer/src/*"
 )
-add_executable(f2 ${f2})
-TARGET_LINK_LIBRARIES(f2 cppunit)
-set_target_properties(f2 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/dist/tests)
-add_test(NaiveBayessClassifier ${PROJECT_SOURCE_DIR}/dist/tests/f2)
+add_executable(nbClassifierTest ${nbClassifierTest})
+TARGET_LINK_LIBRARIES(nbClassifierTest cppunit)
+set_target_properties(nbClassifierTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/dist/tests)
+add_test(NaiveBayessClassifier ${PROJECT_SOURCE_DIR}/dist/tests/nbClassifierTest)
