add missing dependencies for the test

--- a/src/Client/test/CMakeLists.txt
+++ b/src/Client/test/CMakeLists.txt
@@ -1,6 +1,9 @@
 file(GLOB clientTest
     "./*"
     "../src/*"
+    "../../Network/src/*"
+    "../../FileInputReader/src/*"
+    "../../common/src/*"    
 )
 add_executable(clientTest ${clientTest})
 TARGET_LINK_LIBRARIES(clientTest cppunit)
