add uadet2common test

--- a/src/common/test/CMakeLists.txt
+++ b/src/common/test/CMakeLists.txt
@@ -30,3 +30,12 @@ add_executable(commandTest ${commandTest})
 TARGET_LINK_LIBRARIES(commandTest cppunit)
 set_target_properties(commandTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/dist/tests)
 add_test(CommandTest ${PROJECT_SOURCE_DIR}/dist/tests/commandTest)
+
+file(GLOB uadet2commonTest
+    "./uadet2Test*"
+    "../src/uadet2.*"
+)
+add_executable(uadet2commonTest ${uadet2commonTest})
+TARGET_LINK_LIBRARIES(uadet2commonTest cppunit)
+set_target_properties(uadet2commonTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/dist/tests)
+add_test(CommandTest ${PROJECT_SOURCE_DIR}/dist/tests/uadet2commonTest)
