fix the test binary name

--- a/src/Server/test/CMakeLists.txt
+++ b/src/Server/test/CMakeLists.txt
@@ -14,4 +14,4 @@ set(CMAKE_CXX_FLAGS "-std=c++11 -g")
 add_executable(serverTest ${serverTest})
 TARGET_LINK_LIBRARIES(serverTest cppunit)
 set_target_properties(serverTest PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/dist/tests)
-add_test(Server ${PROJECT_SOURCE_DIR}/dist/tests/server)
+add_test(Server ${PROJECT_SOURCE_DIR}/dist/tests/serverTest)
